[package]
name = "pike-enginecontrol"
description = "An Engine Control module implementation over Badger:Pike - Engine Control board."
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Badger-Embedded/SW-Pike-EngineControl"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true

[dependencies]
nb = "1.0.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
embedded-hal = "0.2.6"
panic-halt = "0.2.0"    # Panic handler
bxcan = ">=0.4, <0.6"
can_aerospace_lite = { git = "https://github.com/Badger-Embedded/CANaerospace-Lite", branch = "dev", features=["bxcan-support"] }
state-governor = { git = "https://github.com/Badger-Embedded/state-governor", branch = "main" }
heapless = "0.7.4"
cortex-m-rtic = "0.5"
cortex-m-semihosting = "0.3.7"
mpl3115 = "0.1.0"

# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
# Bluepill contains a 64kB flash variant which is called "medium density"
features = ["stm32f103", "rt", "medium"]
# version = "0.7.0"
git = "https://github.com/stm32-rs/stm32f1xx-hal"
branch = "master"
